Console tab implemented.  Ready for beta testing