@@ -10,11 +10,15 @@ import javafx.fxml.Initializable;
 import javafx.scene.control.*;
 import javafx.scene.layout.BorderPane;
 import javafx.util.Callback;
+import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang3.exception.ExceptionUtils;
+import org.apache.commons.lang3.text.StrSubstitutor;
 import org.mcupdater.*;
 import org.mcupdater.instance.Instance;
 import org.mcupdater.model.*;
+import org.mcupdater.mojang.AssetIndex;
 import org.mcupdater.mojang.AssetManager;
+import org.mcupdater.mojang.Library;
 import org.mcupdater.mojang.MinecraftVersion;
 import org.mcupdater.settings.Profile;
 import org.mcupdater.settings.Settings;
@@ -27,10 +31,9 @@ import org.w3c.dom.Document;
 import org.w3c.dom.Element;
 import org.w3c.dom.NodeList;
 
-import java.io.BufferedReader;
-import java.io.File;
-import java.io.FileNotFoundException;
-import java.io.IOException;
+import java.io.*;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
@@ -45,6 +48,7 @@ public class MainController extends MCUApp implements Initializable, TrackerList
 
 	private static MainController INSTANCE;
 	public ModulePanel pnlModule;
+	public ConsolePane mcuConsole;
 	private FileHandler mcuHandler;
 	public NewsBrowser newsBrowser;
     public ListView<ServerList> listInstances;
@@ -142,7 +146,8 @@ public class MainController extends MCUApp implements Initializable, TrackerList
 								btnUpdate.setDisable(true);
 							}
 						}
-					} finally {
+					} catch (Exception e) {
+						e.printStackTrace();
 					}
 				}
 			}
@@ -177,6 +182,10 @@ public class MainController extends MCUApp implements Initializable, TrackerList
 				instanceChanged(newSL);
 			}
 		});
+		ConsoleHandler consoleHandler = new ConsoleHandler(mcuConsole);
+		consoleHandler.setLevel(Level.INFO);
+		baseLogger.addHandler(consoleHandler);
+		MCUpdater.apiLogger.addHandler(consoleHandler);
 	}
 
 	public static MainController getInstance()
@@ -277,7 +286,177 @@ public class MainController extends MCUApp implements Initializable, TrackerList
 	}
 
 	public void doLaunch() {
-		//TODO: Code here
+		btnLaunch.setDisable(true);
+		Profile launchProfile = profiles.getSelectedProfile();
+		if (!(launchProfile == null)) {
+			SettingsManager.getInstance().getSettings().setLastProfile(launchProfile.getName());
+			SettingsManager.getInstance().getSettings().findProfile(launchProfile.getName()).setLastInstance(selected.getServerId());
+			if (!SettingsManager.getInstance().isDirty()) {
+				SettingsManager.getInstance().saveSettings();
+			}
+			try {
+				tryLaunch(selected, pnlModule.getModules(), launchProfile);
+			} catch (Exception e) {
+				log(e.getMessage());
+				MessageDialog.showMessage(pnlContent.getScene().getWindow(), (e.getMessage() + "\n\nNote: An authentication error can occur if your profile is out of sync with Mojang's servers.\nRe-add your profile in the Settings tab to resync with Mojang."), "MCUpdater");
+			}
+		}
+	}
+
+	private void tryLaunch(ServerList selected, List<ModuleEntry> modules, Profile user) throws Exception {
+		String playerName = user.getName();
+		String sessionKey = user.getSessionKey(this);
+		MinecraftVersion mcVersion = MinecraftVersion.loadVersion(selected.getVersion());
+		String indexName = mcVersion.getAssets();
+		if (indexName == null) {
+			indexName = "legacy";
+		}
+		String mainClass;
+		List<String> args = new ArrayList<>();
+		StringBuilder clArgs = new StringBuilder(mcVersion.getMinecraftArguments());
+		List<String> libs = new ArrayList<>();
+		MCUpdater mcu = MCUpdater.getInstance();
+		File indexesPath = mcu.getArchiveFolder().resolve("assets").resolve("indexes").toFile();
+		File indexFile = new File(indexesPath, indexName + ".json");
+		String json;
+		json = FileUtils.readFileToString(indexFile);
+		AssetIndex index = gson.fromJson(json, AssetIndex.class);
+		Settings settings = SettingsManager.getInstance().getSettings();
+		if (settings.isFullScreen()) {
+			clArgs.append(" --fullscreen");
+		} else {
+			clArgs.append(" --width " + settings.getResWidth() + " --height " + settings.getResHeight());
+		}
+		if (settings.isAutoConnect() && selected.isAutoConnect()) {
+			URI address;
+			try {
+				address = new URI("my://" + selected.getAddress());
+				clArgs.append(" --server " + address.getHost());
+				if (address.getPort() != -1) {
+					clArgs.append(" --port " + address.getPort());
+				}
+			} catch (URISyntaxException e) {
+				e.printStackTrace();
+			}
+		}
+		clArgs.append(" --resourcePackDir ${resource_packs}");
+		args.add((new File(settings.getJrePath()).toPath().resolve("bin").resolve("java").toString()));
+		args.add("-Xms" + settings.getMinMemory());
+		args.add("-Xmx" + settings.getMaxMemory());
+		args.add("-XX:PermSize=" + settings.getPermGen());
+		args.addAll(Arrays.asList(settings.getJvmOpts().split(" ")));
+		if (System.getProperty("os.name").startsWith("Mac")) {
+			args.add("-Xdock:icon=" + mcu.getArchiveFolder().resolve("assets").resolve("icons").resolve("minecraft.icns").toString());
+			args.add("-Xdock:name=Minecraft(MCUpdater)");
+		}
+		args.add("-Djava.library.path=" + mcu.getInstanceRoot().resolve(selected.getServerId()).resolve("lib").resolve("natives").toString());
+		if (!Version.requestedFeatureLevel(selected.getVersion(), "1.6")){
+			args.add("-Dminecraft.applet.TargetDirectory=" + mcu.getInstanceRoot().resolve(selected.getServerId()).toString());
+		}
+		if (!selected.getMainClass().isEmpty()) {
+			mainClass = selected.getMainClass();
+		} else {
+			mainClass = mcVersion.getMainClass();
+		}
+		for (ModuleEntry entry : modules) {
+			if (entry.isSelected()) {
+				if (entry.getModule().getModType().equals(ModType.Library)) {
+					libs.add(entry.getModule().getId() + ".jar");
+				}
+				if (!entry.getModule().getLaunchArgs().isEmpty()) {
+					clArgs.append(" " + entry.getModule().getLaunchArgs());
+				}
+				if (!entry.getModule().getJreArgs().isEmpty()) {
+					args.addAll(Arrays.asList(entry.getModule().getJreArgs().split(" ")));
+				}
+				if (entry.getModule().hasSubmodules()) {
+					for (GenericModule sm : entry.getModule().getSubmodules()) {
+						if (sm.getModType().equals(ModType.Library)) {
+							libs.add(sm.getId() + ".jar");
+						}
+						if (!sm.getLaunchArgs().isEmpty()) {
+							clArgs.append(" " + sm.getLaunchArgs());
+						}
+						if (!sm.getJreArgs().isEmpty()) {
+							args.addAll(Arrays.asList(sm.getJreArgs().split(" ")));
+						}
+					}
+				}
+			}
+		}
+		for (Library lib : mcVersion.getLibraries()) {
+			if (lib.validForOS() && !lib.hasNatives()) {
+				libs.add(lib.getFilename());
+			}
+		}
+		args.add("-cp");
+		StringBuilder classpath = new StringBuilder();
+		for (String entry : libs) {
+			classpath.append(mcu.getInstanceRoot().resolve(selected.getServerId()).resolve("lib").resolve(entry).toString()).append(MCUpdater.cpDelimiter());
+		}
+		classpath.append(mcu.getInstanceRoot().resolve(selected.getServerId()).resolve("bin").resolve("minecraft.jar").toString());
+		args.add(classpath.toString());
+		args.add(mainClass);
+		String tmpclArgs = clArgs.toString();
+		Map<String,String> fields = new HashMap<>();
+		StrSubstitutor fieldReplacer = new StrSubstitutor(fields);
+		fields.put("auth_player_name", playerName);
+		fields.put("auth_uuid", user.getUUID());
+		fields.put("auth_access_token", user.getAccessToken());
+		fields.put("auth_session", sessionKey);
+		fields.put("version_name", selected.getVersion());
+		fields.put("game_directory", mcu.getInstanceRoot().resolve(selected.getServerId()).toString());
+		if (index.isVirtual()) {
+			fields.put("game_assets", mcu.getArchiveFolder().resolve("assets").resolve("virtual").toString());
+		} else {
+			fields.put("game_assets", mcu.getArchiveFolder().resolve("assets").toString());
+		}
+		fields.put("resource_packs", mcu.getInstanceRoot().resolve(selected.getServerId()).resolve("resourcepacks").toString());
+		String[] fieldArr = tmpclArgs.split(" ");
+		for (int i = 0; i < fieldArr.length; i++) {
+			fieldArr[i] = fieldReplacer.replace(fieldArr[i]);
+		}
+		args.addAll(Arrays.asList(fieldArr));
+
+		log("Launch args:");
+		log("=======================");
+		for (String entry : args) {
+			log(entry);
+		}
+		log("=======================");
+		final ProcessBuilder pb = new ProcessBuilder(args);
+		pb.directory(mcu.getInstanceRoot().resolve(selected.getServerId()).toFile());
+		pb.redirectErrorStream(true);
+		Thread gameThread = new Thread(new Runnable(){
+			@Override
+			public void run() {
+				try{
+					Process task = pb.start();
+					BufferedReader buffRead = new BufferedReader(new InputStreamReader(task.getInputStream()));
+					String line;
+					while ((line = buffRead.readLine()) != null) {
+						if (line.length() > 0) {
+							consoleWrite(line);
+						}
+					}
+				} catch (Exception e) {
+					consoleWrite(e.getMessage());
+				} finally {
+					setPlaying(false);
+				}
+			}
+		});
+		gameThread.start();
+		setPlaying(true);
+	}
+
+	private void consoleWrite(final String message) {
+		Platform.runLater(new Runnable(){
+			@Override
+			public void run() {
+				mcuConsole.console.appendText(message + "\n");
+			}
+		});
 	}
 
 	public void instanceChanged(ServerList entry) {
@@ -306,16 +485,14 @@ public class MainController extends MCUApp implements Initializable, TrackerList
 			baseLogger.log(Level.WARNING, "instance.json file not found.  This is not an error if the instance has not been installed.");
 		}
 		refreshModList(modList, instData.getOptionalMods());
-		boolean needUpdate = (!instData.getHash().isEmpty() || !instData.getHash().equals(remoteHash));
+		boolean needUpdate = (instData.getHash().isEmpty() || !instData.getHash().equals(remoteHash));
 		boolean needNewMCU = Version.isVersionOld(entry.getMCUVersion());
 
 		if (needUpdate) {
 			MessageDialog.showMessage(pnlContent.getScene().getWindow(), Main.getTranslation().updateRequired, "MCUpdater");
-			//showDialog(Main.getTranslation().updateRequired);
 		}
 		if (needNewMCU) {
-			//TODO: Show warning
-			//showDialog(Main.getTranslation().oldMCUpdater);
+			MessageDialog.showMessage(pnlContent.getScene().getWindow(), Main.getTranslation().oldMCUpdater, "MCUpdater");
 		}
 	}
 
